go/parser/sfz_parser.go
// Code generated from Sfz.g4 by ANTLR 4.8. DO NOT EDIT.

package parser // Sfz

import (
	"fmt"
	"reflect"
	"strconv"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = reflect.Copy
var _ = strconv.Itoa

var deserializer = antlr.NewATNDeserializer(nil)
var deserializedATN = deserializer.DeserializeFromUInt16(parserATN)

var literalNames = []string{
	"", "'<'", "'>'", "'region'", "'group'", "'control'", "'global'", "'curve'",
	"'effect'", "'master'", "'midi'", "'sampler'", "'='", "'ampeg_release'",
	"'bend_down'", "'bend_up'", "'hikey'", "'hivel'", "'key'", "'lokey'", "'lovel'",
	"'pitch_keycenter'", "'sample'", "'seq_length'", "'seq_position'", "'sw_default'",
	"'sw_hikey'", "'sw_last'", "'sw_lokey'",
}
var symbolicNames = []string{
	"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
	"", "", "", "", "", "", "", "", "", "", "", "Digit", "Text", "Newline",
	"Whitespace", "BlockComment", "LineComment",
}

var ruleNames = []string{
	"sfz", "line", "header_stmt", "header", "opcode_stmt", "opcode", "value",
}
var decisionToDFA = make([]*antlr.DFA, len(deserializedATN.DecisionToState))

func init() {
	for index, ds := range deserializedATN.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(ds, index)
	}
}

type SfzParser struct {
	*antlr.BaseParser
}

func NewSfzParser(input antlr.TokenStream) *SfzParser {
	this := new(SfzParser)

	this.BaseParser = antlr.NewBaseParser(input)

	this.Interpreter = antlr.NewParserATNSimulator(this, deserializedATN, decisionToDFA, antlr.NewPredictionContextCache())
	this.RuleNames = ruleNames
	this.LiteralNames = literalNames
	this.SymbolicNames = symbolicNames
	this.GrammarFileName = "Sfz.g4"

	return this
}

// SfzParser tokens.
const (
	SfzParserEOF          = antlr.TokenEOF
	SfzParserT__0         = 1
	SfzParserT__1         = 2
	SfzParserT__2         = 3
	SfzParserT__3         = 4
	SfzParserT__4         = 5
	SfzParserT__5         = 6
	SfzParserT__6         = 7
	SfzParserT__7         = 8
	SfzParserT__8         = 9
	SfzParserT__9         = 10
	SfzParserT__10        = 11
	SfzParserT__11        = 12
	SfzParserT__12        = 13
	SfzParserT__13        = 14
	SfzParserT__14        = 15
	SfzParserT__15        = 16
	SfzParserT__16        = 17
	SfzParserT__17        = 18
	SfzParserT__18        = 19
	SfzParserT__19        = 20
	SfzParserT__20        = 21
	SfzParserT__21        = 22
	SfzParserT__22        = 23
	SfzParserT__23        = 24
	SfzParserT__24        = 25
	SfzParserT__25        = 26
	SfzParserT__26        = 27
	SfzParserT__27        = 28
	SfzParserDigit        = 29
	SfzParserText         = 30
	SfzParserNewline      = 31
	SfzParserWhitespace   = 32
	SfzParserBlockComment = 33
	SfzParserLineComment  = 34
)

// SfzParser rules.
const (
	SfzParserRULE_sfz         = 0
	SfzParserRULE_line        = 1
	SfzParserRULE_header_stmt = 2
	SfzParserRULE_header      = 3
	SfzParserRULE_opcode_stmt = 4
	SfzParserRULE_opcode      = 5
	SfzParserRULE_value       = 6
)

// ISfzContext is an interface to support dynamic dispatch.
type ISfzContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsSfzContext differentiates from other interfaces.
	IsSfzContext()
}

type SfzContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptySfzContext() *SfzContext {
	var p = new(SfzContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SfzParserRULE_sfz
	return p
}

func (*SfzContext) IsSfzContext() {}

func NewSfzContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *SfzContext {
	var p = new(SfzContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SfzParserRULE_sfz

	return p
}

func (s *SfzContext) GetParser() antlr.Parser { return s.parser }

func (s *SfzContext) EOF() antlr.TerminalNode {
	return s.GetToken(SfzParserEOF, 0)
}

func (s *SfzContext) AllLine() []ILineContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*ILineContext)(nil)).Elem())
	var tst = make([]ILineContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(ILineContext)
		}
	}

	return tst
}

func (s *SfzContext) Line(i int) ILineContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ILineContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(ILineContext)
}

func (s *SfzContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *SfzContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *SfzContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SfzListener); ok {
		listenerT.EnterSfz(s)
	}
}

func (s *SfzContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SfzListener); ok {
		listenerT.ExitSfz(s)
	}
}

func (p *SfzParser) Sfz() (localctx ISfzContext) {
	localctx = NewSfzContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, SfzParserRULE_sfz)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	p.SetState(15)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for ok := true; ok; ok = (((_la)&-(0x1f+1)) == 0 && ((1<<uint(_la))&((1<<SfzParserT__0)|(1<<SfzParserT__12)|(1<<SfzParserT__13)|(1<<SfzParserT__14)|(1<<SfzParserT__15)|(1<<SfzParserT__16)|(1<<SfzParserT__17)|(1<<SfzParserT__18)|(1<<SfzParserT__19)|(1<<SfzParserT__20)|(1<<SfzParserT__21)|(1<<SfzParserT__22)|(1<<SfzParserT__23)|(1<<SfzParserT__24)|(1<<SfzParserT__25)|(1<<SfzParserT__26)|(1<<SfzParserT__27))) != 0) {
		{
			p.SetState(14)
			p.Line()
		}

		p.SetState(17)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(19)
		p.Match(SfzParserEOF)
	}

	return localctx
}

// ILineContext is an interface to support dynamic dispatch.
type ILineContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsLineContext differentiates from other interfaces.
	IsLineContext()
}

type LineContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyLineContext() *LineContext {
	var p = new(LineContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SfzParserRULE_line
	return p
}

func (*LineContext) IsLineContext() {}

func NewLineContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *LineContext {
	var p = new(LineContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SfzParserRULE_line

	return p
}

func (s *LineContext) GetParser() antlr.Parser { return s.parser }

func (s *LineContext) Header_stmt() IHeader_stmtContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IHeader_stmtContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IHeader_stmtContext)
}

func (s *LineContext) Opcode_stmt() IOpcode_stmtContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IOpcode_stmtContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IOpcode_stmtContext)
}

func (s *LineContext) AllNewline() []antlr.TerminalNode {
	return s.GetTokens(SfzParserNewline)
}

func (s *LineContext) Newline(i int) antlr.TerminalNode {
	return s.GetToken(SfzParserNewline, i)
}

func (s *LineContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *LineContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *LineContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SfzListener); ok {
		listenerT.EnterLine(s)
	}
}

func (s *LineContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SfzListener); ok {
		listenerT.ExitLine(s)
	}
}

func (p *SfzParser) Line() (localctx ILineContext) {
	localctx = NewLineContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, SfzParserRULE_line)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	p.SetState(23)
	p.GetErrorHandler().Sync(p)

	switch p.GetTokenStream().LA(1) {
	case SfzParserT__0:
		{
			p.SetState(21)
			p.Header_stmt()
		}

	case SfzParserT__12, SfzParserT__13, SfzParserT__14, SfzParserT__15, SfzParserT__16, SfzParserT__17, SfzParserT__18, SfzParserT__19, SfzParserT__20, SfzParserT__21, SfzParserT__22, SfzParserT__23, SfzParserT__24, SfzParserT__25, SfzParserT__26, SfzParserT__27:
		{
			p.SetState(22)
			p.Opcode_stmt()
		}

	default:
		panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
	}
	p.SetState(26)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for ok := true; ok; ok = _la == SfzParserNewline {
		{
			p.SetState(25)
			p.Match(SfzParserNewline)
		}

		p.SetState(28)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}

	return localctx
}

// IHeader_stmtContext is an interface to support dynamic dispatch.
type IHeader_stmtContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsHeader_stmtContext differentiates from other interfaces.
	IsHeader_stmtContext()
}

type Header_stmtContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyHeader_stmtContext() *Header_stmtContext {
	var p = new(Header_stmtContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SfzParserRULE_header_stmt
	return p
}

func (*Header_stmtContext) IsHeader_stmtContext() {}

func NewHeader_stmtContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Header_stmtContext {
	var p = new(Header_stmtContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SfzParserRULE_header_stmt

	return p
}

func (s *Header_stmtContext) GetParser() antlr.Parser { return s.parser }

func (s *Header_stmtContext) Header() IHeaderContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IHeaderContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IHeaderContext)
}

func (s *Header_stmtContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Header_stmtContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *Header_stmtContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SfzListener); ok {
		listenerT.EnterHeader_stmt(s)
	}
}

func (s *Header_stmtContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SfzListener); ok {
		listenerT.ExitHeader_stmt(s)
	}
}

func (p *SfzParser) Header_stmt() (localctx IHeader_stmtContext) {
	localctx = NewHeader_stmtContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, SfzParserRULE_header_stmt)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(30)
		p.Match(SfzParserT__0)
	}
	{
		p.SetState(31)
		p.Header()
	}
	{
		p.SetState(32)
		p.Match(SfzParserT__1)
	}

	return localctx
}

// IHeaderContext is an interface to support dynamic dispatch.
type IHeaderContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsHeaderContext differentiates from other interfaces.
	IsHeaderContext()
}

type HeaderContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyHeaderContext() *HeaderContext {
	var p = new(HeaderContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SfzParserRULE_header
	return p
}

func (*HeaderContext) IsHeaderContext() {}

func NewHeaderContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *HeaderContext {
	var p = new(HeaderContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SfzParserRULE_header

	return p
}

func (s *HeaderContext) GetParser() antlr.Parser { return s.parser }
func (s *HeaderContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *HeaderContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *HeaderContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SfzListener); ok {
		listenerT.EnterHeader(s)
	}
}

func (s *HeaderContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SfzListener); ok {
		listenerT.ExitHeader(s)
	}
}

func (p *SfzParser) Header() (localctx IHeaderContext) {
	localctx = NewHeaderContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, SfzParserRULE_header)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(34)
		_la = p.GetTokenStream().LA(1)

		if !(((_la)&-(0x1f+1)) == 0 && ((1<<uint(_la))&((1<<SfzParserT__2)|(1<<SfzParserT__3)|(1<<SfzParserT__4)|(1<<SfzParserT__5)|(1<<SfzParserT__6)|(1<<SfzParserT__7)|(1<<SfzParserT__8)|(1<<SfzParserT__9)|(1<<SfzParserT__10))) != 0) {
			p.GetErrorHandler().RecoverInline(p)
		} else {
			p.GetErrorHandler().ReportMatch(p)
			p.Consume()
		}
	}

	return localctx
}

// IOpcode_stmtContext is an interface to support dynamic dispatch.
type IOpcode_stmtContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsOpcode_stmtContext differentiates from other interfaces.
	IsOpcode_stmtContext()
}

type Opcode_stmtContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyOpcode_stmtContext() *Opcode_stmtContext {
	var p = new(Opcode_stmtContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SfzParserRULE_opcode_stmt
	return p
}

func (*Opcode_stmtContext) IsOpcode_stmtContext() {}

func NewOpcode_stmtContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Opcode_stmtContext {
	var p = new(Opcode_stmtContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SfzParserRULE_opcode_stmt

	return p
}

func (s *Opcode_stmtContext) GetParser() antlr.Parser { return s.parser }

func (s *Opcode_stmtContext) Opcode() IOpcodeContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IOpcodeContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IOpcodeContext)
}

func (s *Opcode_stmtContext) Value() IValueContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IValueContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IValueContext)
}

func (s *Opcode_stmtContext) AllWhitespace() []antlr.TerminalNode {
	return s.GetTokens(SfzParserWhitespace)
}

func (s *Opcode_stmtContext) Whitespace(i int) antlr.TerminalNode {
	return s.GetToken(SfzParserWhitespace, i)
}

func (s *Opcode_stmtContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Opcode_stmtContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *Opcode_stmtContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SfzListener); ok {
		listenerT.EnterOpcode_stmt(s)
	}
}

func (s *Opcode_stmtContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SfzListener); ok {
		listenerT.ExitOpcode_stmt(s)
	}
}

func (p *SfzParser) Opcode_stmt() (localctx IOpcode_stmtContext) {
	localctx = NewOpcode_stmtContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, SfzParserRULE_opcode_stmt)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(36)
		p.Opcode()
	}
	p.SetState(38)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == SfzParserWhitespace {
		{
			p.SetState(37)
			p.Match(SfzParserWhitespace)
		}

	}
	{
		p.SetState(40)
		p.Match(SfzParserT__11)
	}
	p.SetState(42)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == SfzParserWhitespace {
		{
			p.SetState(41)
			p.Match(SfzParserWhitespace)
		}

	}
	{
		p.SetState(44)
		p.Value()
	}

	return localctx
}

// IOpcodeContext is an interface to support dynamic dispatch.
type IOpcodeContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsOpcodeContext differentiates from other interfaces.
	IsOpcodeContext()
}

type OpcodeContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyOpcodeContext() *OpcodeContext {
	var p = new(OpcodeContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SfzParserRULE_opcode
	return p
}

func (*OpcodeContext) IsOpcodeContext() {}

func NewOpcodeContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *OpcodeContext {
	var p = new(OpcodeContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SfzParserRULE_opcode

	return p
}

func (s *OpcodeContext) GetParser() antlr.Parser { return s.parser }
func (s *OpcodeContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *OpcodeContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *OpcodeContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SfzListener); ok {
		listenerT.EnterOpcode(s)
	}
}

func (s *OpcodeContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SfzListener); ok {
		listenerT.ExitOpcode(s)
	}
}

func (p *SfzParser) Opcode() (localctx IOpcodeContext) {
	localctx = NewOpcodeContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 10, SfzParserRULE_opcode)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(46)
		_la = p.GetTokenStream().LA(1)

		if !(((_la)&-(0x1f+1)) == 0 && ((1<<uint(_la))&((1<<SfzParserT__12)|(1<<SfzParserT__13)|(1<<SfzParserT__14)|(1<<SfzParserT__15)|(1<<SfzParserT__16)|(1<<SfzParserT__17)|(1<<SfzParserT__18)|(1<<SfzParserT__19)|(1<<SfzParserT__20)|(1<<SfzParserT__21)|(1<<SfzParserT__22)|(1<<SfzParserT__23)|(1<<SfzParserT__24)|(1<<SfzParserT__25)|(1<<SfzParserT__26)|(1<<SfzParserT__27))) != 0) {
			p.GetErrorHandler().RecoverInline(p)
		} else {
			p.GetErrorHandler().ReportMatch(p)
			p.Consume()
		}
	}

	return localctx
}

// IValueContext is an interface to support dynamic dispatch.
type IValueContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsValueContext differentiates from other interfaces.
	IsValueContext()
}

type ValueContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyValueContext() *ValueContext {
	var p = new(ValueContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SfzParserRULE_value
	return p
}

func (*ValueContext) IsValueContext() {}

func NewValueContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ValueContext {
	var p = new(ValueContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SfzParserRULE_value

	return p
}

func (s *ValueContext) GetParser() antlr.Parser { return s.parser }

func (s *ValueContext) AllText() []antlr.TerminalNode {
	return s.GetTokens(SfzParserText)
}

func (s *ValueContext) Text(i int) antlr.TerminalNode {
	return s.GetToken(SfzParserText, i)
}

func (s *ValueContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ValueContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ValueContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SfzListener); ok {
		listenerT.EnterValue(s)
	}
}

func (s *ValueContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SfzListener); ok {
		listenerT.ExitValue(s)
	}
}

func (p *SfzParser) Value() (localctx IValueContext) {
	localctx = NewValueContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 12, SfzParserRULE_value)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	p.SetState(49)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for ok := true; ok; ok = _la == SfzParserText {
		{
			p.SetState(48)
			p.Match(SfzParserText)
		}

		p.SetState(51)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}

	return localctx
}
